<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">AndroidTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="permission_granted">"Permission %1$s granted!"</string>
    <string name="permission_not_granted">"Permission %1$s not granted!"</string>
    <string name="show_sysapp">Show device apps</string>
    <string name="show_dialog">Dialog</string>
    <string name="title_activity_sys_apps">SysAppsActivity</string>
    <string name="msg_loading">loading...</string>
    <string name="start_activity">Activity</string>
    <string name="start_documentsactivity">DocActivity</string>
    <string name="start_downloadproviderui">DProviderui</string>
    <string name="title_activity_switcher_demo">SwitcherDemoActivity</string>
    <string name="show_switcher">Show switchers</string>
    <string name="switch_empty" />
    <string name="widetouch_torchlight">Flashlight</string>
    <string name="switch_brightness">Brightness</string>
    <string name="switch_wifi">WLAN</string>
    <string name="switch_rotation">Auto Rotate</string>
    <string name="switch_smart_rotation">Smart Rotate</string>
    <string name="switch_rotation_off">Rotate Off</string>
    <string name="switch_bluetooth">Bluetooth</string>
    <string name="switch_profile">Ringtones</string>
    <string name="switch_flightmode">Airplane mode</string>
    <string name="switch_mobile">Data Connection</string>
    <string name="switch_gps">GPS</string>
    <string name="get_resource">Resource</string>
    <string name="relative_textview">Relative textview</string>
    <string name="switchers_demo">Switchers demo</string>
    <string name="lvp_switchers_demo">LVP switchers demo</string>
    <string name="shut_down">Shut down</string>
    <string name="go_to_sleep">Go to sleep</string>
    <string name="show_view">Show view</string>
    <string name="show_fixedlength">Show fixed</string>
    <string name="show_textsize">Show size</string>
    <string name="title_activity_show_view">ShowViewActivity</string>
    <string name="show_notification">Notification</string>
    <string name="title_activity_resource">ResourceActivity</string>
    <string name="show_resource">Show resource</string>
    <string name="title_activity_permission">PermissionActivity</string>
    <string name="asynctask_cancel">AsyncTask_Cancel</string>
    <string name="title_activity_my_preference">MyPreferenceActivity</string>
    <string name="title_activity_list_view">ListViewTestActivity</string>
    <string name="title_activity_inflate">InflateActivity</string>
    <string name="title_activity_myselfview">MySelfViewActivity</string>
    <string name="title_activity_viewpager">ViewPagerActivity</string>
    <string name="title_activity_viewpager_fragment">ViewPagerFragmentActivity</string>
    <string name="title_activity_viewpager_state_fragment">ViewPagerStateFragmentActivity</string>
    <string name="preference_on">On</string>
    <string name="preference_title">Title</string>
    <string name="preference_summary">Summary</string>
    <string name="preference_selfcheckbox_summary">右侧checkbox改成箭头，前提是android:widgetLayout中的CheckBox必须使用Android原生的\"@+android:id/checkbox\"</string>
    <string name="preference_status_summary">右侧使用\"@+id/tv_status_summary\"的TextView(内容为\"On\")来填充mypreference.xml中android:widgetLayout=\"@layout/preference_status_widget\"布局，后面的箭头和另一个textview不在android:widgetLayout范围内</string>
    <string name="text_xliff">Text combined: <xliff:g id="time">%1$s</xliff:g></string>
    <string name="text_xliff_other">other xliff</string>
    <string name="title_activity_asynchronous">AsynchronousActivity</string>
    <string name="title_activity_request_permissions">RequestPermissionsActivity</string>
    <string name="missing_required_permission">You have disabled a required permission.</string>
    <string name="title_activity_storage">StorageActivity</string>
    <string name="title_activity_sdcard">ExtStorageActivity</string>
    <string name="title_activity_int_storage">IntStorageActivity</string>
    <string name="title_activity_content_resolver_demo">ContentResolverDemoActivity</string>
    <string name="title_activity_package_manager">PackageManagerActivity</string>
    <string name="title_activity_on_click">TouchEventActivity</string>
    <string name="title_activity_measure_layout_draw">MeasureLayoutDrawActivity</string>
    <string name="title_activity_ui">UIActivity</string>
    <string name="title_template_step">Item: <xliff:g id="step_number">%1$d</xliff:g></string>
    <string name="lorem_ipsum">"FragmentPagerAdapter与FragmentStatePagerAdapter的主要区别就在与对于fragment是否销毁，下面细说：\n区别1)FragmentPagerAdapter：对于不再需要的fragment，选择调用onDestroyView方法(不调用onDestroy、onDetach)，仅销毁视图，并不会销毁fragment实例。因此之前加载过的fragment会保存在内存中，如果数量达到一定值会显著消耗内存。\n区别2)FragmentStatePagerAdapter：会销毁不再需要的fragment，当当前事务提交以后，会彻底的将fragmeng从当前Activity的FragmentManager中移除，当然也会从内存中移除(保留当前项目左右各一个，其余的调用onDestroyView、onDestroy、onDetach彻底销毁)。state标明，销毁时，会将其onSaveInstanceState(Bundle outState)中的bundle信息保存下来，当用户切换回来，可以通过该bundle恢复生成新的fragment，也就是说，你可以在onSaveInstanceState(Bundle outState)方法中保存一些数据，在onCreate中进行恢复创建。\n	总之：使用FragmentStatePagerAdapter当然更省内存，但是销毁新建也是需要时间的。一般情况下，如果你是制作主页面，就3、4个Tab，那么可以选择使用FragmentPagerAdapter，如果你是用于ViewPager展示数量特别多的条目时，那么建议使用FragmentStatePagerAdapter。"</string>
    <string name="title_activity_bitmap_factory">BitmapFactoryActivity</string>
    <string name="title_activity_fragment_test">FragmentTestActivity</string>
    <string name="title_activity_fragment_test2">FragmentTest2Activity</string>
    <string name="descr_image">Image</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="title_activity_bitmap_uil">BitmapUILActivity</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    <string name="delete">Delete</string>
    <string name="locale_not_translated">May not be available in some apps</string>
    <string name="add_a_language">Add a language</string>
    <string name="pref_title_lang_selection">Language preferences</string>
    <string name="dlg_remove_locales_error_title">Can’t remove all languages</string>
    <string name="dlg_remove_locales_error_message">Keep at least one preferred language</string>

    <plurals name="dlg_remove_locales_title">
        <item quantity="one">Remove selected language?</item>
        <item quantity="other">Remove selected languages?</item>
    </plurals>

    <string name="dlg_remove_locales_message">Text will be displayed in another language.</string>
    <string name="action_drag_label_move_up">Move up</string>
    <string name="action_drag_label_move_down">Move down</string>
    <string name="action_drag_label_move_top">Move to top</string>
    <string name="action_drag_label_move_bottom">Move to bottom</string>
    <string name="action_drag_label_remove">Remove language</string>
    <string name="title_activity_language_for_n">LanguageForNActivity</string>
    <string name="region_picker_section_all">All regions</string>
    <string name="language_picker_section_all">All languages</string>
    <string name="language_picker_section_suggested">Suggested</string>
    <string name="locale_search_menu">Search</string>
    <string name="search_language_hint">Type language name</string>
    <string name="title_activity_timezone">TimezoneActivity</string>
	<string name="global_change_warning" product="default">This setting affects all users on this phone.</string>
	<string name="zone_list_menu_sort_alphabetically">Sort alphabetically</string>
	<string name="zone_list_menu_sort_by_timezone">Sort by time zone</string>
	<string name="update_timezone">Update timezone</string>
</resources>
