<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<Button
		    android:id="@+id/btn_showview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/show_view" />   
		<Button
			android:id="@+id/btn_showfixedlength"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/show_fixedlength" />	
		<Button
			android:id="@+id/btn_showtextsize"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/show_textsize" />			
    </LinearLayout>         
	<!-- 下列布局文件内没有指定任何内容 -->
	<LinearLayout
	    android:id="@+id/layout_linear"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone"
		android:orientation="horizontal" />       
</LinearLayout>
