<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/layout_linear_buttons22"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.androidtemp.MainActivity" >
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		tools:context="com.example.androidtemp.MainActivity" >
		<Button
		    android:id="@+id/btn_getresource"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:singleLine="true"
	        android:text="@string/get_resource" />	  
		<Button
		    android:id="@+id/btn_showdialog"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:singleLine="true"
	        android:text="@string/show_dialog" />	
		<Button
		    android:id="@+id/btn_shownotification"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:singleLine="true"
	        android:text="@string/show_notification" />		        
    </LinearLayout>  	
    <include layout="@layout/relative_layout" />      
</LinearLayout>